<resources>
    <string name="app_name">SEGUIMIENTO PELÍCULAS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Título: %1$s</string>
    <string name="genre">Género: %1$s</string>
    <string name="rating">Calificación: %1$s</string>
    <string name="premiere">Estreno: %1$s</string>
    <string name="status">Estado: %1$s</string>
    <string name="comments">Comentarios: %1$s</string>
    <string name="title_register">AGREGAR USUARIO</string>
    <string name="add_film">AÑADIR PELÍCULA</string>
    <string name="username">Usuario</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="welcome">Bienvenido\nMovie Tracking App</string>
    <string name="register">Registrarse</string>
    <string name="error_message">Mensaje de error</string>
    <string name="profile">PERFIL DEL USUARIO</string>
    <string name="name">Nombre de Usuario</string>
    <string name="email_profile">Correo Electrónico</string>
    <string name="newPassword">Nueva Contraseña</string>
    <string name="confirm_newPassword">Confirmar Contraseña</string>
    <string name="update">Actualizar</string>
    <string name="delete_account">Eliminar Cuenta</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="my_movies">MIS PELÍCULAS</string>
    <string name="username_login">Usuario</string>
    <string name="password_login">Contraseña</string>
    <string name="error_message_login">Usuario o contraseña incorrectos</string>
    <string name="login">Login</string>
    <string name="register_login">Registro</string>
    <string name="edit_movie">EDITAR PELÍCULA</string>
    <string name="edit_title">Título</string>
    <string name="edit_genre">Género</string>
    <string name="edit_rating">Calificación</string>
    <string name="edit_premiere">Estreno</string>
    <string name="edit_status">Estreno</string>
    <string name="edit_comments">Comentarios</string>
    <string name="movie_update">Actualizar</string>
    <string name="movie_delete">Eliminar</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_edit">Editar</string>
    <string name="nav_show_movies">Películas</string>
    <string name="take_photo">Tomar foto</string>
    <string name="nav_map">Cines</string>
    <string name="cinemas">CINES CERCANOS</string>
</resources>