<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Título de la película -->
            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Género de la película -->
            <TextView
                android:id="@+id/movieGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textSize="14sp"
                android:textColor="@android:color/holo_green_dark"/>

            <!-- Rating de la película -->
            <TextView
                android:id="@+id/movieRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textSize="14sp"
                android:textColor="@android:color/holo_green_dark"/>

            <!-- Estreno de la película -->
            <TextView
                android:id="@+id/moviePremiere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/premiere"
                android:textSize="14sp"
                android:textColor="@android:color/holo_green_dark"/>

            <!-- Estado de la película -->
            <TextView
                android:id="@+id/movieStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="14sp"
                android:textColor="@android:color/holo_green_dark"/>

            <!-- Comentarios sobre la película -->
            <TextView
                android:id="@+id/movieComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textSize="14sp"
                android:textColor="@android:color/holo_green_dark"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
